<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/btn_linear_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362"
        android:onClick="showToastLinearLayout"/>

    <Button
        android:id="@+id/btnRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/btn_relative_layout"
        app:layout_constraintEnd_toEndOf="@+id/btnLinearLayout"
        app:layout_constraintStart_toStartOf="@+id/btnLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/btnLinearLayout"
        android:onClick="showToastRelativeLayout"/>

    <Button
        android:id="@+id/btnHomework"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/btn_homework"
        app:layout_constraintEnd_toEndOf="@+id/btnRelativeLayout"
        app:layout_constraintStart_toStartOf="@+id/btnRelativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/btnRelativeLayout"
        android:onClick="showToastHomework"/>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="142dp"
        android:text="@string/txt_description"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />
</androidx.constraintlayout.widget.ConstraintLayout>